# medunda

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  actions.html  components.html  downloader.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  workflow.html
.doctrees/: actions.doctree  components.doctree  downloader.doctree  environment.pickle  index.doctree  intro.doctree  workflow.doctree
.github/workflows/: ci.yml  doc.yml  docs_html.yml  docs_pdf.yml  pre-commit.yml
_sources/: actions.md.txt  components.md.txt  downloader.md.txt  index.md.txt  workflow.md.txt
data/: .gitattributes
docs/source/: actions.md  components.md  conf.py  downloader.md  index.md  intro.md  plotter.md  reducer.md  workflow.md
domains/: AdriaticSea.yaml  CentralMediterranean.yaml  GSA9.yaml  GlobalOcean.yaml  LigurianSea.yaml  MediterraneanSea.yaml  NorthAdr_wkt.csv  NorthAdriatic.yaml  NorthWestMediterranean.yaml
examples/: ligurian.yaml
provider_configs/: NECCTON_G100.yaml  NECCTON_Leonardo.yaml  NECCTON_local.yaml  NECTON_local.yaml  REA_Leonardo.yaml  REA_local.yaml
src/medunda/: Plotter.py  __init__.py  __main__.py  cmems_downloader.py  dataset.py  downloader.py  fn_download.py  plotter.py  reducer.py
src/medunda/actions/: __init__.py  average_between_layers.py  averaging_between_layers.py  calculate_stats.py  climatology.py  compute_average.py  compute_depth_average.py  compute_depth_integral.py  depth_average.py  extract_annual_extremes.py  extract_annual_extremes_per_layer.py  extract_bottom.py  extract_extremes.py  extract_layer.py  extract_layer_extremes.py  extract_surface.py  integrate_between_layers.py  integration.py  reduce_axes.py
src/medunda/components/: data_files.py  dataset.py  frequencies.py  geodata.py  (+1 more)
tests/: conftest.py  fixtures.py  test_domain_from_basin.py  test_file_names.py  test_time_tables.py
tests/actions/: test_average_between_layers.py  test_calculate_stats.py  test_compute_average.py  test_compute_depth_average.py  test_compute_depth_integral.py  test_compute_integral.py  test_depth_average.py  test_extract_annual_extremes.py  test_extract_annual_extremes_per_layer.py  test_extract_bottom.py  test_extract_extremes.py  test_extract_layer.py  test_extract_surface.py  test_integrate_between_layers.py  test_reduce_axes.py
tests/integration/: test_cmems_climatology.py
(+40 files in other folders)
