[project]
name = "medunda"
version = "0.1.0"
description = "A toolkit for donwloading and analyzing oceanographic data on the Mediterranean Sea"
authors = [
    {name = "Nada Akkari",email = "akkarinada8@gmail.com"},
    {name = "Stefano Piani",email = "spiani@ogs.it"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "xarray (>=2025.6.1,<2028.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "dask[complete] (>=2025.7.0,<2028.0.0)",
    "copernicusmarine (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "cmocean (>=4.0.3,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "bitsea @ git+https://github.com/inogs/bit.sea.git",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
hypothesis = "^6.135.26"
pre-commit = "^4.4.0"
deptry = "^0.24.0"


[tool.poetry.scripts]
medunda = "medunda.__main__:main"


[tool.poetry]
packages = [{include = "medunda", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
